新增取得教師收益報表 API
